SERVER-23833 DocumentSourceLookup::getOutputSorts correctly truncates input sort set.

This commit is identical to 44abb8db32a6fad705854793e397961dfc72d09e.